@@ -1,6 +1,5 @@
 package org.folio.services;
 
-import static java.util.stream.Collectors.toList;
 import static org.folio.rest.RestConstants.MAX_IDS_FOR_GET_RQ;
 import static org.folio.rest.util.HelperUtils.collectResultsOnSuccess;
 import static org.folio.rest.util.HelperUtils.convertIdsToCqlQuery;
@@ -10,7 +9,6 @@ import static org.folio.rest.util.ResourcePathResolver.resourcesPath;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.folio.rest.core.RestClient;
 import org.folio.rest.core.models.RequestContext;
@@ -68,10 +66,10 @@ public class ExpenseClassService {
     List<Future<List<ExpenseClass>>> futures = StreamEx
       .ofSubLists(budgetIds, MAX_IDS_FOR_GET_RQ)
       .map(ids ->  getExpenseClassesChunk(ids, requestContext))
-      .collect(toList());
+      .toList();
     return collectResultsOnSuccess(futures)
-      .map(listList -> listList.stream().flatMap(Collection::stream).collect(toList()))
-      .map(expenseClasses -> expenseClasses.stream().distinct().collect(Collectors.toList()));
+      .map(listList -> listList.stream().flatMap(Collection::stream).toList())
+      .map(expenseClasses -> expenseClasses.stream().distinct().toList());
   }
 
   private Future<List<ExpenseClass>> getExpenseClassesChunk(List<String> ids, RequestContext requestContext) {
